1.不固定屏幕方向 2.增加手动授权按钮,自动授权失败时也可以手动授权

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,8 +66,7 @@
         android:theme="@style/AppTheme"
         android:name=".AlexaApplication">
 
-        <activity android:name=".MainActivity"
-            android:screenOrientation="portrait">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
